// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Top buttons component renders correctly if logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBtns
    authenticated={true}
    hideDashboard={false}
    logout={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="right h5"
      >
        <UNDEFINED>
          <Btn
            extraCss={null}
            kind="primary"
            size="small"
          >
            State dashboard
          </Btn>
          <Btn
            extraCss="ml1"
            kind="primary"
            onClick={[Function]}
            size="small"
          >
            Log out
          </Btn>
        </UNDEFINED>
      </div>,
      "className": "clearfix mb2",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <UNDEFINED>
          <Btn
            extraCss={null}
            kind="primary"
            size="small"
          >
            State dashboard
          </Btn>
          <Btn
            extraCss="ml1"
            kind="primary"
            onClick={[Function]}
            size="small"
          >
            Log out
          </Btn>
        </UNDEFINED>,
        "className": "right h5",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Btn
              extraCss={null}
              kind="primary"
              size="small"
            >
              State dashboard
            </Btn>,
            <Btn
              extraCss="ml1"
              kind="primary"
              onClick={[Function]}
              size="small"
            >
              Log out
            </Btn>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "State dashboard",
              "extraCss": null,
              "kind": "primary",
              "size": "small",
            },
            "ref": null,
            "rendered": "State dashboard",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Log out",
              "extraCss": "ml1",
              "kind": "primary",
              "onClick": [Function],
              "size": "small",
            },
            "ref": null,
            "rendered": "Log out",
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "div",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="right h5"
        >
          <UNDEFINED>
            <Btn
              extraCss={null}
              kind="primary"
              size="small"
            >
              State dashboard
            </Btn>
            <Btn
              extraCss="ml1"
              kind="primary"
              onClick={[Function]}
              size="small"
            >
              Log out
            </Btn>
          </UNDEFINED>
        </div>,
        "className": "clearfix mb2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <UNDEFINED>
            <Btn
              extraCss={null}
              kind="primary"
              size="small"
            >
              State dashboard
            </Btn>
            <Btn
              extraCss="ml1"
              kind="primary"
              onClick={[Function]}
              size="small"
            >
              Log out
            </Btn>
          </UNDEFINED>,
          "className": "right h5",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Btn
                extraCss={null}
                kind="primary"
                size="small"
              >
                State dashboard
              </Btn>,
              <Btn
                extraCss="ml1"
                kind="primary"
                onClick={[Function]}
                size="small"
              >
                Log out
              </Btn>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "State dashboard",
                "extraCss": null,
                "kind": "primary",
                "size": "small",
              },
              "ref": null,
              "rendered": "State dashboard",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Log out",
                "extraCss": "ml1",
                "kind": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Log out",
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        "type": "div",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Top buttons component renders correctly if logged out 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBtns
    authenticated={false}
    hideDashboard={false}
    logout={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="right h5"
      >
        <Link
          className="btn btn-primary btn-small"
          replace={false}
          to="/login"
        >
          Log in
        </Link>
      </div>,
      "className": "clearfix mb2",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Link
          className="btn btn-primary btn-small"
          replace={false}
          to="/login"
        >
          Log in
        </Link>,
        "className": "right h5",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Log in",
          "className": "btn btn-primary btn-small",
          "replace": false,
          "to": "/login",
        },
        "ref": null,
        "rendered": "Log in",
        "type": [Function],
      },
      "type": "div",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="right h5"
        >
          <Link
            className="btn btn-primary btn-small"
            replace={false}
            to="/login"
          >
            Log in
          </Link>
        </div>,
        "className": "clearfix mb2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            className="btn btn-primary btn-small"
            replace={false}
            to="/login"
          >
            Log in
          </Link>,
          "className": "right h5",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Log in",
            "className": "btn btn-primary btn-small",
            "replace": false,
            "to": "/login",
          },
          "ref": null,
          "rendered": "Log in",
          "type": [Function],
        },
        "type": "div",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Top buttons component renders correctly with dashboard hidden 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBtns
    authenticated={true}
    hideDashboard={true}
    logout={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="right h5"
      >
        <UNDEFINED>
          <Btn
            extraCss="ml1"
            kind="primary"
            onClick={[Function]}
            size="small"
          >
            Log out
          </Btn>
        </UNDEFINED>
      </div>,
      "className": "clearfix mb2",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <UNDEFINED>
          <Btn
            extraCss="ml1"
            kind="primary"
            onClick={[Function]}
            size="small"
          >
            Log out
          </Btn>
        </UNDEFINED>,
        "className": "right h5",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <Btn
              extraCss="ml1"
              kind="primary"
              onClick={[Function]}
              size="small"
            >
              Log out
            </Btn>,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Log out",
              "extraCss": "ml1",
              "kind": "primary",
              "onClick": [Function],
              "size": "small",
            },
            "ref": null,
            "rendered": "Log out",
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "div",
    },
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="right h5"
        >
          <UNDEFINED>
            <Btn
              extraCss="ml1"
              kind="primary"
              onClick={[Function]}
              size="small"
            >
              Log out
            </Btn>
          </UNDEFINED>
        </div>,
        "className": "clearfix mb2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <UNDEFINED>
            <Btn
              extraCss="ml1"
              kind="primary"
              onClick={[Function]}
              size="small"
            >
              Log out
            </Btn>
          </UNDEFINED>,
          "className": "right h5",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <Btn
                extraCss="ml1"
                kind="primary"
                onClick={[Function]}
                size="small"
              >
                Log out
              </Btn>,
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Log out",
                "extraCss": "ml1",
                "kind": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Log out",
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
        "type": "div",
      },
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
